roles/kind/files/k8s/monitoring/blackbox-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
      annotations:
        # annotations for sd in prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "9115"
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter:v0.18.0
        ports:
        - containerPort: 9115
        volumeMounts:
          - name: config-volume
            mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: blackbox-exporter-config
---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: icmp-target
#  namespace: monitoring
#data:
#  icmp-target.yml: |
#    - targets:
#        - '192.168.0.14'
#        - '192.168.0.15'
#        - '192.168.0.16'
