roles/kind/files/k8s/monitoring/grafana.yaml
# setup ingress, service config
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # rewrite url after /prometheus/xxx -> /xxx for prometheus
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /grafana(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: grafana
          servicePort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana:7.3.3
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: datasource-config-volume
          mountPath: /etc/grafana/provisioning/datasources/
        - name: dashboard-provider-config-volume
          mountPath: /etc/grafana/provisioning/dashboards/
        - name: dashboard-node-exporter-config-volume
          mountPath: /etc/grafana/provisioning/dashboards/nodes/
        - name: dashboard-kubernetes-config-volume
          mountPath: /etc/grafana/provisioning/dashboards/kubernetes/
      volumes:
      - name: datasource-config-volume
        configMap:
          name: grafana-datasource-config
      - name: dashboard-provider-config-volume
        configMap:
          name: grafana-dashboard-provider-config
      - name: dashboard-node-exporter-config-volume
        configMap:
          name: grafana-node-exporter-dashboard-config
      - name: dashboard-kubernetes-config-volume
        configMap:
          name: grafana-kubernetes-dashboard-config
